# maxSubarray

./: CMakeLists.txt
inc/: maxSubarray.hh  randomInputData.hh
src/: main.cpp  maxSubarray.cpp  randomInputData.cpp
